# First_project

./: .gitignore  ML_debug.ipynb  ML_debug_2.ipynb  ads_event_stats.ipynb  ads_events_100_edgecases.csv  pyproject.toml  snippest.ipynb
data/: ads_events.csv
src/: data_analysis.py  data_creator.py  interview_code.py  system_design.py
tests/: test_data_analysis.py  test_interview_code.py  test_prep.py  test_system_design.py
